# devops-full-pipeline

./: .coveragerc  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
app/: database.py  main.py
app/models/: task.py
app/routers/: tasks.py
app/schemas/: task.py
tests/: test_tasks.py
