[project]
name = "devops-full-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "ruff>=0.15.9",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v -p no:cacheprovider"
